[project]
name = "project-data-analysis-beer"
version = "0.1.0"
description = ""
authors = [
    {name = "Renan Marx",email = "renanmarx@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.0,<3.0.0)",
    "numpy (>=2.3.1,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "plotly (>=6.2.0,<7.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "nbformat (>=5.10.4,<6.0.0)"
]

[tool.poetry]
packages = [{include = "project_data_analysis_beer", from = "src"}]


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
